[gd_scene load_steps=3 format=2]

[ext_resource path="res://lobby/lobby.gd" type="Script" id=1]
[ext_resource path="res://lobby/waitingRoom.tscn" type="PackedScene" id=2]

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.101961, 0.0823529, 0.0823529, 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 340.0
margin_top = 216.0
margin_right = 684.0
margin_bottom = 384.0
custom_constants/separation = 16

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 344.0
margin_bottom = 14.0
text = "Lobby"
align = 1

[node name="GridContainer" type="GridContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 30.0
margin_right = 344.0
margin_bottom = 132.0
custom_constants/vseparation = 15
custom_constants/hseparation = 15
columns = 2

[node name="Namelabel" type="Label" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_top = 5.0
margin_right = 73.0
margin_bottom = 19.0
text = "Name:"

[node name="NameTextBox" type="LineEdit" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_left = 88.0
margin_right = 344.0
margin_bottom = 24.0
rect_min_size = Vector2( 256, 0 )

[node name="IPLabel" type="Label" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_top = 44.0
margin_right = 73.0
margin_bottom = 58.0
text = "IP Address:"

[node name="IPTextBox" type="LineEdit" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_left = 88.0
margin_top = 39.0
margin_right = 344.0
margin_bottom = 63.0
rect_min_size = Vector2( 256, 0 )
text = "127.0.0.1"

[node name="PortLabel" type="Label" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_top = 83.0
margin_right = 73.0
margin_bottom = 97.0
text = "Port:"

[node name="PortTextBox" type="LineEdit" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_left = 88.0
margin_top = 78.0
margin_right = 344.0
margin_bottom = 102.0
rect_min_size = Vector2( 256, 0 )
text = "60090"

[node name="JoinButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 148.0
margin_right = 344.0
margin_bottom = 168.0
text = "Join"

[node name="WaitingRoom" parent="." instance=ExtResource( 2 )]

[connection signal="pressed" from="CenterContainer/VBoxContainer/JoinButton" to="." method="_on_JoinButton_pressed"]
